CTT_Package/objects/TriggerFrameworkProfileConfig__mdt.object
<CustomObject>
    <description>Junction object between Profile, Config</description>
    <fields>
        <fullName>Config__c</fullName>
        <label>Config</label>
        <referenceTo>TriggerFrameworkConfig__mdt</referenceTo>
        <relationshipLabel>Trigger Framework Profile Configs</relationshipLabel>
        <relationshipName>Trigger_Framework_Profile_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disabled records are equivalent to Deleted records. As we can&apos;t delete Metadata types, make them to Disabled.</description>
        <inlineHelpText>Disabled records are equivalent to Deleted records</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <referenceTo>TriggerFrameworkProfile__mdt</referenceTo>
        <relationshipLabel>Trigger Framework Profile Configs</relationshipLabel>
        <relationshipName>Trigger_Framework_Profile_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Trigger Framework Profile Config</label>
    <pluralLabel>Trigger Framework Profile Configs</pluralLabel>
</CustomObject>